# curby-jarvis

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: index.html
scripts/: demo.sh  ensure-running.sh  run-live.sh
src/curby_jarvis/: __init__.py  app.py  audio_feedback.py  cgevent.py  circuit_breaker.py  claude_cli.py  intent.py  latency.py  macwin.py  mcp_bridge.py  nlp_utils.py  osascript_bridge.py  permissions.py  presence.py  prewarm.py  router.py  rule_table.py  screen.py  session_state.py  stt.py  task_engine.py  telemetry.py
src/curby_jarvis/ax/: __init__.py  ax_bridge.py  secure_input.py
src/curby_jarvis/connectors/: __init__.py  agent_fallback.py  agent_loop.py  app_launch.py  browser_tab.py  computer_use.py  deixis_click.py  intent_parse.py  mcp_client.py  (+2 more)
tests/: conftest.py  test_agent_fallback.py  test_agent_loop.py  test_app_launch.py  test_audio_feedback.py  test_browser_tab.py  test_circuit_breaker.py  test_claude_cli.py  test_command_input.py  test_computer_use.py  test_connectors_undo.py  test_deixis_click.py  test_gesture_bus.py  test_golden.py  test_intent_parse.py  test_intent_parse_n.py  test_live_dispatch.py  test_mcp_bridge.py  test_media_transport.py  test_menu_command.py  test_nlp_utils.py  test_overlay_caption_edge_history.py  test_overlay_card.py  test_overlay_reticle.py  test_permissions.py  test_pointer_calib.py  test_pointer_fusion.py  test_pointer_ws.py  test_presence.py  test_preview_card_l.py  test_session_state.py  test_stt.py  test_task_engine.py  test_telemetry.py
tests/golden/: run_golden.py
(+16 files in other folders)
